@@ -7,7 +7,7 @@
 # Enable TCP API in JS8Call. File>Settings>Reporting, checkmark on Allow setting
 # station information, Enable TCP Server API, Accept TCP Requests.
 #
-# MIT License, Copyright 2023 Joseph D Lyman KF7MIX
+# MIT License, Copyright 2024 Joseph D Lyman KF7MIX
 #
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to deal
